# task-mngr

./: README.md  docker-compose.yaml
.github/workflows/: main.yml
back-end/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  ci-cd.yaml  pyproject.toml
back-end/src/db/models/: task.py
back-end/src/modules/: task.py
back-end/src/schemas/: task.py
front-end/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
front-end/src/: styles.css
front-end/src/app/: app.component.ts  app.routes.ts  http.service.ts
front-end/src/app/create-task/: create-task.component.css  create-task.component.html  create-task.component.ts
front-end/src/app/edit-task/: edit-task.component.html  edit-task.component.ts
front-end/src/app/task-item/: task-item.component.css  task-item.component.html  task-item.component.ts
front-end/src/app/task-list/: task-list.component.css  task-list.component.html  task-list.component.ts
front-end/src/services/: http.service.ts  task.service.ts
front-end/src/types/: task.type.ts
