[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Belal ELmeligy <belalelmeligy516@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
flask-smorest = "^0.45.0"
sqlalchemy = "^2.0.37"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.10"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
